Dev-Setup Docs: add a FAQ (common problems) & add fix for IDEA google-java-format